css/style.css
@import 'imgText.css';

/* Header styling */
h1{
    font-family:"Chango", sans-serif;
    text-align: center;
    font-size: 50px;
    color: #696969;
}
.sign p{
   margin-bottom: 0; 
}
p{
    font-family:"Chango", sans-serif;
    text-align: center;
    color: #696969;
    font-size: 30px;
}
.col-lg-2.address{
    color:#696969;
    font-family:"Montserrat", sans-serif; 
    text-align: right;
}    

/* Navbar styling */
.row.navbar{ 
    font-family:"Montserrat", sans-serif; 
    font-size: 25px;
    background-color: #696969;
    font-weight: 600;
    padding: 10px;
    text-align: center;
}
 .navstyle{
    text-decoration: none;
    color: white;
}
.navstyle:hover{
    color: black;
}
.container-fluid.sticky-top{
    position:sticky;
}

/* myVideo styling */
.hero{
    width: 100%;
    height: 100vh;
    position: relative;
    overflow: hidden;
}
#myVideo{
    object-fit: cover;
    width: 100%;
    height:100%;
    top: 0;
    left: 0;
    position: relative;
}
.container-fluid{
    padding: 0;
    margin: 0;
}
.video-line-top{
    position: absolute;
    top: 75px;
    left: 105px;
    font-family:"Chango", sans-serif; 
    color:white;
    font-size: 30px;
}
.video-line-bottom{
    position: absolute;
    top: 125px;
    left:50px;
    font-family:"Chango", sans-serif; 
    color: white;
    font-size: 30px;
}

@media only screen and (max-width: 576px) {
   .video-line-top{
      top:15px ;
      left:30px;
   } 
    .video-line-bottom{
        top:90px ;
        left:30px;
    }    
}

